New Projects added

--- a/portfolio/src/app/profile/picture/picture.component.html
+++ b/portfolio/src/app/profile/picture/picture.component.html
@@ -19,8 +19,8 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-6 d-flex justify-content-center ">
-            <img style="height: 500px; "
-                src="https://avatoon.me/wp-content/uploads/2020/07/Cartoon-Pic-Ideas-for-DP-Profile-01.png" alt=""
+            <img style="height: 350px; "
+                src="../../../assets/images/profile/profile-pic (5).png" alt=""
                 srcset="">
         </div>
     </div>
