--- a/portfolio/src/app/profile/portfolio/portfolio.component.html
+++ b/portfolio/src/app/profile/portfolio/portfolio.component.html
@@ -22,7 +22,7 @@
     <div class="name fs-2 roboto-medium">
         chintala_sanjay
     </div>
-    <div class="menu">
+    <!-- <div class="menu">
         <div class=" box-shade ">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
@@ -31,7 +31,7 @@
                 <i class="bi bi-list fs-4"></i>
             </button>
         </div>
-    </div>
+    </div> -->
 </div>
 <app-picture></app-picture>
 <app-about id="about"></app-about>
