--- a/portfolio/src/app/profile/experience/experience.component.html
+++ b/portfolio/src/app/profile/experience/experience.component.html
@@ -11,7 +11,7 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                 aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner d-flex justify-content-center">
+        <div class="carousel-inner d-flex justify-content-between px-5">
             <div class="carousel-item project-item active box-shadow card " style="background-color: transparent; ">
                 <div class="card-body ">
                     <div class="row">
